--- a/package.json
+++ b/package.json
@@ -9,19 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.3"
+    "next": "15.3.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "bcrypt-ts": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.17.0",
+    "mongoose": "^8.15.1",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.3",
-    "@eslint/eslintrc": "^3"
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.0.2",
+    "@types/compression": "^1.8.1",
+    "@types/eslint": "^9.6.1",
+    "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/lodash": "^4.17.17",
+    "@types/supertest": "^6.0.3",
+    "@types/validator": "^13.15.1",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
+    "eslint-config-next": "^15.3.3",
+    "eslint-plugin-jest": "^28.13.3",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint": "^9.28.0",
+    "formik": "^2.4.6",
+    "jest": "^29",
+    "lodash": "^4.17.21",
+    "puppeteer": "^24.10.0",
+    "supertest": "^7.1.1",
+    "tailwindcss": "^4.1.8",
+    "ts-jest": "^29.3.4",
+    "typescript": "^5.8.3",
+    "yup": "^1.6.1"
   }
 }
