--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "bcrypt-ts": "^7.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.525.0",
+    "mongodb": "^6.17.0",
+    "mongoose": "^8.15.1",
     "next": "15.3.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "bcrypt-ts": "^7.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.17.0",
-    "mongoose": "^8.15.1",
-    "validator": "^13.15.15"
+    "react-hook-form": "^7.60.0",
+    "tailwind-merge": "^3.3.1",
+    "validator": "^13.15.15",
+    "zod": "^3.25.74"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -30,18 +39,18 @@
     "@types/validator": "^13.15.1",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
+    "eslint": "^9.28.0",
     "eslint-config-next": "^15.3.3",
     "eslint-plugin-jest": "^28.13.3",
+    "eslint-plugin-perfectionist": "^4.15.0",
     "eslint-plugin-react": "^7.37.5",
-    "eslint": "^9.28.0",
-    "formik": "^2.4.6",
     "jest": "^29",
     "lodash": "^4.17.21",
     "puppeteer": "^24.10.0",
     "supertest": "^7.1.1",
     "tailwindcss": "^4.1.8",
     "ts-jest": "^29.3.4",
-    "typescript": "^5.8.3",
-    "yup": "^1.6.1"
+    "tw-animate-css": "^1.3.5",
+    "typescript": "^5.8.3"
   }
 }
