--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
-    "mongodb": "^6.17.0",
-    "mongoose": "^8.15.1",
-    "next": "15.3.3",
+    "mongodb": "^6.18.0",
+    "mongoose": "^8.16.5",
+    "next": "^15.4.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
