--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lucide-react": "^0.525.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.16.5",
-    "next": "^15.4.4",
+    "next": "^16.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
@@ -41,6 +41,7 @@
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/lodash": "^4.17.17",
+    "@types/react": "19.2.7",
     "@types/supertest": "^6.0.3",
     "@types/validator": "^13.15.1",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
