--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
+    "server-only": "^0.0.1",
     "tailwind-merge": "^3.3.1",
     "validator": "^13.15.15",
     "zod": "^3.25.74"
