--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "next lint --fix"
+    "lint:fix": "eslint --fix ."
   },
   "dependencies": {
     "@editorjs/editorjs": "^2.30.8",
