--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "ts:check": "tsc -p tsconfig.json --noEmit"
   },
   "dependencies": {
     "@editorjs/editorjs": "^2.30.8",
